; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/isa/extr_ad1816.c_port_rd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/isa/extr_ad1816.c_port_rd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.resource*, i32)* @port_rd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @port_rd(%struct.resource* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.resource*, align 8
  %5 = alloca i32, align 4
  store %struct.resource* %0, %struct.resource** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.resource*, %struct.resource** %4, align 8
  %7 = icmp ne %struct.resource* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load %struct.resource*, %struct.resource** %4, align 8
  %10 = call i32 @rman_get_bustag(%struct.resource* %9)
  %11 = load %struct.resource*, %struct.resource** %4, align 8
  %12 = call i32 @rman_get_bushandle(%struct.resource* %11)
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @bus_space_read_1(i32 %10, i32 %12, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %16

15:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %8
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @bus_space_read_1(i32, i32, i32) #1

declare dso_local i32 @rman_get_bustag(%struct.resource*) #1

declare dso_local i32 @rman_get_bushandle(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
